# resourcename

./: .gitignore  Cargo.toml  LICENSE  Package.resolved  Package.swift  README.md  go.mod  go.sum  go.work  package.json  pyproject.toml  resourcename.go
c/: .gitignore  Makefile  README.md
c/examples/: example.c  test.c
c/lib/: compile.c  generate.c  internal.h  parse.c  resourcename.h  template.c  util.c
go/: empty_tag_test.go  go.mod  marshal.go  marshal_test.go  nested_test.go  resourcename.go  template.go  unmarshal.go  unmarshal_test.go
go/example/: main.go
python/: README.md  pyproject.toml
python/resourcename/: __init__.py  template.py
rust/: Cargo.toml  README.md  lib.rs  resource_error.rs  resource_template.rs  template_helpers.rs  tests.rs
rust/examples/: basic.rs  error_cases.rs  nested.rs  serde_rename.rs
rust/macros/: Cargo.toml  lib.rs
rust/tests/: derive_compile_fail.rs
rust/tests/ui/: duplicate_resource_name_attr.rs
swift/: README.md
swift/Examples/: main.swift
swift/Sources/Example/: main.swift
swift/Sources/ResourceName/: ResourceName.swift  ResourceNamespace.swift  ResourceTemplate+Codable.swift  ResourceTemplate.swift  ResourcenameError.swift
swift/Sources/ResourcenameMacros/: ResourceMacro.swift
typescript/: .gitignore  README.md  index.ts  package.json  tsconfig.build.json  tsconfig.json  tsdoc.json  typedoc.json
typescript/examples/: README.md  index.ts  package.json
typescript/lib/: decorator.ts  index.ts  resource-template.ts
typescript/shared/: index.ts  log-level.ts  logging.ts
(+1 files in other folders)
