[project]
name = "resourcename"
version = "0.1.0"
description = "Google-style resource name templates with `{placeholder}` segments, parse/generate, and a `@resourcename` class decorator."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
keywords = ["resource-name", "google", "api", "routing", "template"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resourcename"]

[dependency-groups]
dev = ["pytest>=8"]
